apply responsive css updates to create a better experience on mobile and fix app height and background issues.

--- a/src/App.css
+++ b/src/App.css
@@ -19,11 +19,6 @@
   /* --nightTimeGradient: linear-gradient(180deg, rgba(255, 183, 77, 1) 0%, rgba(255, 152, 0, 1) 50%, rgba(230, 81, 0, 1) 100%); */
   --nightTimeGradient: linear-gradient(to top right, #03001e, #7303c0, #ec38bc);
 }
-/* html {
-  background: var(--dayTimeGradient);
-  background-size: 150%;
-  height: 100%;
-} */
 
 * {
   margin: 0;
@@ -32,22 +27,25 @@
   letter-spacing: 1px;
 }
 
+html {
+  background: var(--dayTimeGradient);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
 #app-body {
   font-size: min(max(1rem, 4vw), 1.2rem);
-  /* height: 100%; */
-  background: var(--dayTimeGradient);
-  background-size: 190%;
-  height: 100vh;
-  height: 100svh;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-/* When the browser is greater than 836px tall */
-/* @media screen and (min-height: 836px) {
-  #app-body {
-    height: 100svh;
-  }
-} */
+
 .night {
-  background:var(--nightTimeGradient)
+  background: var(--nightTimeGradient);
 }
 
 h1 {
@@ -70,15 +68,6 @@ h5 {
   font-size: min(max(0.9rem, 2.5vw), 1rem);
 }
 
-.weatherApp {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: white;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-
 /*style the user inputs*/
 .userInputs {
   padding: 1rem;
@@ -94,7 +83,7 @@ h5 {
 }
 .userInputs input:focus {
   outline: none;
-  border: 2px solid black ;
+  border: 2px solid black;
 }
 .userInputs button {
   padding: 0.5rem;
@@ -125,7 +114,7 @@ h5 {
 .currentWeather {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 .mainDisplay {
@@ -139,8 +128,8 @@ h5 {
 }
 .currentTemp {
   justify-self: flex-end;
-  margin-right:2rem;
-  transform: scale(1.5);
+  margin-right: 2rem;
+  transform: scale(1.4);
 }
 .weatherGroup {
   display: flex;
@@ -156,19 +145,29 @@ h5 {
 /* When the browser is less than 639px wide */
 @media screen and (max-width: 639px) {
   .userInputs {
-    width: 90%;
-    margin: 0.25rem;
+    width: 100%;
+    padding: 0;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    height: 4vh;
+  }
+  .userInputs button {
+    border-radius: 0rem !important;
+  }
+  .location {
+    margin-top: 2rem;
   }
   .mainDisplay img {
     width: 90px;
-    height:90px;
+    height: 90px;
   }
   .currentTemp {
     transform: scale(1);
-    margin-right: 1rem;
+    margin-right: 0rem;
   }
   .weatherGroupText {
-    transform: scale(.8) translateX(-20px);
+    transform: scale(0.8) translateX(-20px);
   }
   .mainDisplay {
     grid-template-columns: 38% 62%;
